# Ableton-Project-Manager

./: .env.example  .gitignore  Ableton_Project_Detail_Studio_Timeline_Addendum_vNext.docx  Ableton_Project_Library_App_Plan_v1.docx  Ableton_Project_Library_Build_Spec_v1.docx  CLAUDE.md  DEVELOPER_GUIDE.md  PRD.md  README.md  RELEASE_NOTES_1.1.0.md  build.sh  dev.sh  fix-01-build-wrapper-scripts.md  gotcha-fixes.md  index.html  mobile-sync-feature-plan(1).md  package-lock.json  package.json  setcrate-site-plan.md  vite.config.ts
brandkit/: setcrate-brand-guide.html
docs/: Ableton_Cover_System_Mood_Board_Addendum_vNext.docx  Ableton_Obsidian_Integration_Addendum_ModelB.docx  CLAUDE.md
legaldocs/: privacy-policy.md  refund-policy.md  terms-of-service.md
mobile/: App.tsx  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: als_parser.rs  lib.rs  main.rs
src-tauri/src/artwork/: mod.rs
src-tauri/src/commands/: ableton.rs  als.rs  artwork.rs  assets.rs  auth.rs  bounces.rs  bulk.rs  collections.rs  covers.rs  health.rs  license.rs  markers.rs  mod.rs  notes.rs  projects.rs  references.rs  scanner.rs  sessions.rs  sets.rs  settings.rs  share.rs  soundcloud.rs  spotify.rs  sync.rs  tags.rs  tasks.rs  updater.rs  versions.rs
src-tauri/src/cover_gen/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs  schema.sql
src-tauri/src/license/: api.rs  mod.rs  trial.rs
src-tauri/src/mp3/: mod.rs
src-tauri/src/scanner/: mod.rs  walker.rs  wav_parser.rs
src-tauri/src/soundcloud/: mod.rs
src-tauri/src/spotify/: mod.rs
src-tauri/src/supabase/: api.rs  auth.rs  migration.rs  mod.rs  sync.rs  upload.rs
(+222 files in other folders)
