[package]
name = "ableton-project-library"
version = "0.1.0"
description = "Ableton Project Library Manager"
authors = ["Rob"]
edition = "2021"

[lib]
name = "ableton_project_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
