[package]
name = "setcrate"
version = "0.1.0"
description = "SetCrate — Ableton Live project manager"
authors = ["Rob"]
edition = "2021"

[lib]
name = "setcrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
mp3lame-encoder = "0.2"
